@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2022 the original author or authors.
+ * Copyright 2004-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,9 +28,9 @@ public class PirateTypeHandlerCallback implements TypeHandlerCallback {
   public Object getResult(ResultGetter getter) throws SQLException {
     String s = getter.getString();
     if ("Aye".equalsIgnoreCase(s)) {
-      return new Boolean(true);
+      return Boolean.valueOf(true);
     } else if ("Nay".equalsIgnoreCase(s)) {
-      return new Boolean(false);
+      return Boolean.valueOf(false);
     } else {
       throw new SQLException("Unexpected value " + s + " found where 'Aye' or 'Nay' was expected.");
     }
@@ -49,9 +49,9 @@ public class PirateTypeHandlerCallback implements TypeHandlerCallback {
   @Override
   public Object valueOf(String s) {
     if ("Aye".equalsIgnoreCase(s)) {
-      return new Boolean(true);
+      return Boolean.valueOf(true);
     } else if ("Nay".equalsIgnoreCase(s)) {
-      return new Boolean(false);
+      return Boolean.valueOf(false);
     } else {
       throw new SqlMapException("Unexpected value " + s + " found where 'Aye' or 'Nay' was expected.");
     }
